made some new changes for Testing1

--- a/SQLNotes/readme
+++ b/SQLNotes/readme
@@ -1,4 +1,7 @@
 This is a readme file.
 
 Added a new FEATURE called as Feature1
+SQL is very good.
+SQL is important for Big Data interviews.
+We can use SQL in Spark SQL too.
 
